--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://indranilsamanta.github.io/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
