--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="jigar lifecodess,portfolio,lifecodes, jigar sable, lifecodess,personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Jigar's Portfolio. Passionate Web & App Developer. Freelancer Web Designer and Android Developer." />
+    <meta name="keywords" content="Indranil lifecodess,portfolio,lifecodes, Indranil Samanta, lifecodess,personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Indranil's Portfolio. Passionate Web & App Developer. Freelancer Web Designer and Android Developer." />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
